kubernetes/iptables_exporter/iptables-save.txt
# Generated by iptables-save v1.8.9 on Sun Nov  3 04:10:30 2024

*filter
:INPUT ACCEPT [172304:25477005]
:FORWARD ACCEPT [19:1512]
:OUTPUT ACCEPT [171882:49657459]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT

# Completed on Sun Nov  3 04:10:30 2024
# Generated by iptables-save v1.8.9 on Sun Nov  3 04:10:30 2024
*mangle
:PREROUTING ACCEPT [7041361:1966020091]
:INPUT ACCEPT [6831918:1535512002]
:FORWARD ACCEPT [209443:430508089]
:OUTPUT ACCEPT [6805619:2048127077]
:POSTROUTING ACCEPT [7015027:2478633066]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
COMMIT

# Completed on Sun Nov  3 04:10:30 2024
# Generated by iptables-save v1.8.9 on Sun Nov  3 04:10:30 2024
*nat
:PREROUTING ACCEPT [143:8580]
:INPUT ACCEPT [216:12992]
:OUTPUT ACCEPT [3323:199933]
:POSTROUTING ACCEPT [3336:201053]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
:KIND-MASQ-AGENT - [0:0]
:KUBE-EXT-DZDM7IO5AFEVYOOO - [0:0]
:KUBE-EXT-POKN4CH4DSJ62JJQ - [0:0]
:KUBE-EXT-TTFD5KSLOLXBOCXP - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2UVSSC3CVMBGMTKM - [0:0]
:KUBE-SEP-5ESA4NH7X3XM47QM - [0:0]
:KUBE-SEP-6E7XQMQ4RAYOWTTM - [0:0]
:KUBE-SEP-AC73W4T6RI3OJJHK - [0:0]
:KUBE-SEP-ETTNL26ZIOYBEQUF - [0:0]
:KUBE-SEP-FV55VDA2PSGDD6O7 - [0:0]
:KUBE-SEP-KNQXFJZOZP2GHUE2 - [0:0]
:KUBE-SEP-OI6O6S6A7LILGFKB - [0:0]
:KUBE-SEP-OKLCRWA7UCKC5CQW - [0:0]
:KUBE-SEP-PUHFDAMRBZWCPADU - [0:0]
:KUBE-SEP-SF3LG62VAE5ALYDV - [0:0]
:KUBE-SEP-WXWGHGKZOCNYRYI7 - [0:0]
:KUBE-SEP-ZP3FB6NMPNCO4VBJ - [0:0]
:KUBE-SEP-ZXMNUKOKXUTL2MK2 - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-AOUT2BU4S3M45XHL - [0:0]
:KUBE-SVC-DZDM7IO5AFEVYOOO - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-FGHWS5UEQEMPW7MD - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-POKN4CH4DSJ62JJQ - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-TTFD5KSLOLXBOCXP - [0:0]
:KUBE-SVC-UQFAXRMDKWGP57EQ - [0:0]
:KUBE-SVC-VEIQN2Y4INZD32M6 - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -d 192.168.65.254/32 -j DOCKER_OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -d 192.168.65.254/32 -j DOCKER_OUTPUT
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -d 192.168.65.254/32 -j DOCKER_POSTROUTING
-A POSTROUTING -m addrtype ! --dst-type LOCAL -m comment --comment "kind-masq-agent: ensure nat POSTROUTING directs all non-LOCAL destination traffic to our custom KIND-MASQ-AGENT chain" -j KIND-MASQ-AGENT
-A DOCKER_OUTPUT -d 192.168.65.254/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:36283
-A DOCKER_OUTPUT -d 192.168.65.254/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:42552
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 36283 -j SNAT --to-source 192.168.65.254:53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 42552 -j SNAT --to-source 192.168.65.254:53
-A KIND-MASQ-AGENT -d 10.244.0.0/16 -m comment --comment "kind-masq-agent: local traffic is not subject to MASQUERADE" -j RETURN
-A KIND-MASQ-AGENT -m comment --comment "kind-masq-agent: outbound traffic is subject to MASQUERADE (must be last in chain)" -j MASQUERADE
-A KUBE-EXT-DZDM7IO5AFEVYOOO -m comment --comment "masquerade traffic for monitoring/prometheus-stack-grafana:http-web external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-DZDM7IO5AFEVYOOO -j KUBE-SVC-DZDM7IO5AFEVYOOO
-A KUBE-EXT-POKN4CH4DSJ62JJQ -m comment --comment "masquerade traffic for monitoring/prometheus-stack-kube-prom-prometheus:http-web external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-POKN4CH4DSJ62JJQ -j KUBE-SVC-POKN4CH4DSJ62JJQ
-A KUBE-EXT-TTFD5KSLOLXBOCXP -m comment --comment "masquerade traffic for monitoring/prometheus-stack-kube-prom-prometheus:reloader-web external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-TTFD5KSLOLXBOCXP -j KUBE-SVC-TTFD5KSLOLXBOCXP
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "monitoring/prometheus-stack-grafana:http-web" -m tcp --dport 30080 -j KUBE-EXT-DZDM7IO5AFEVYOOO
-A KUBE-NODEPORTS -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:http-web" -m tcp --dport 30090 -j KUBE-EXT-POKN4CH4DSJ62JJQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:reloader-web" -m tcp --dport 32622 -j KUBE-EXT-TTFD5KSLOLXBOCXP
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-2UVSSC3CVMBGMTKM -s 10.244.0.17/32 -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:reloader-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-2UVSSC3CVMBGMTKM -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:reloader-web" -m tcp -j DNAT --to-destination 10.244.0.17:8080
-A KUBE-SEP-5ESA4NH7X3XM47QM -s 10.244.0.14/32 -m comment --comment "monitoring/prometheus-stack-kube-state-metrics:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-5ESA4NH7X3XM47QM -p tcp -m comment --comment "monitoring/prometheus-stack-kube-state-metrics:http" -m tcp -j DNAT --to-destination 10.244.0.14:8080
-A KUBE-SEP-6E7XQMQ4RAYOWTTM -s 10.244.0.3/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-6E7XQMQ4RAYOWTTM -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.0.3:53
-A KUBE-SEP-AC73W4T6RI3OJJHK -s 172.18.0.6/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-AC73W4T6RI3OJJHK -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 172.18.0.6:6443
-A KUBE-SEP-ETTNL26ZIOYBEQUF -s 172.18.0.6/32 -m comment --comment "kube-system/iptables-exporter:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-ETTNL26ZIOYBEQUF -p tcp -m comment --comment "kube-system/iptables-exporter:metrics" -m tcp -j DNAT --to-destination 172.18.0.6:9455
-A KUBE-SEP-FV55VDA2PSGDD6O7 -s 172.18.0.6/32 -m comment --comment "monitoring/prometheus-stack-prometheus-node-exporter:http-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-FV55VDA2PSGDD6O7 -p tcp -m comment --comment "monitoring/prometheus-stack-prometheus-node-exporter:http-metrics" -m tcp -j DNAT --to-destination 172.18.0.6:9100
-A KUBE-SEP-KNQXFJZOZP2GHUE2 -s 10.244.0.15/32 -m comment --comment "monitoring/prometheus-stack-kube-prom-operator:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-KNQXFJZOZP2GHUE2 -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-operator:https" -m tcp -j DNAT --to-destination 10.244.0.15:10250
-A KUBE-SEP-OI6O6S6A7LILGFKB -s 10.244.0.17/32 -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:http-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-OI6O6S6A7LILGFKB -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:http-web" -m tcp -j DNAT --to-destination 10.244.0.17:9090
-A KUBE-SEP-OKLCRWA7UCKC5CQW -s 10.244.0.13/32 -m comment --comment "monitoring/prometheus-stack-grafana:http-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-OKLCRWA7UCKC5CQW -p tcp -m comment --comment "monitoring/prometheus-stack-grafana:http-web" -m tcp -j DNAT --to-destination 10.244.0.13:3000
-A KUBE-SEP-PUHFDAMRBZWCPADU -s 10.244.0.4/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-PUHFDAMRBZWCPADU -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.244.0.4:9153
-A KUBE-SEP-SF3LG62VAE5ALYDV -s 10.244.0.4/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-SF3LG62VAE5ALYDV -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.0.4:53
-A KUBE-SEP-WXWGHGKZOCNYRYI7 -s 10.244.0.4/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-WXWGHGKZOCNYRYI7 -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.0.4:53
-A KUBE-SEP-ZP3FB6NMPNCO4VBJ -s 10.244.0.3/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZP3FB6NMPNCO4VBJ -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.244.0.3:9153
-A KUBE-SEP-ZXMNUKOKXUTL2MK2 -s 10.244.0.3/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZXMNUKOKXUTL2MK2 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.0.3:53
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.96.226.108/32 -p tcp -m comment --comment "monitoring/prometheus-stack-grafana:http-web cluster IP" -m tcp --dport 80 -j KUBE-SVC-DZDM7IO5AFEVYOOO
-A KUBE-SERVICES -d 10.96.254.17/32 -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:http-web cluster IP" -m tcp --dport 9090 -j KUBE-SVC-POKN4CH4DSJ62JJQ
-A KUBE-SERVICES -d 10.96.254.17/32 -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:reloader-web cluster IP" -m tcp --dport 8080 -j KUBE-SVC-TTFD5KSLOLXBOCXP
-A KUBE-SERVICES -d 10.96.159.22/32 -p tcp -m comment --comment "monitoring/prometheus-stack-kube-state-metrics:http cluster IP" -m tcp --dport 8080 -j KUBE-SVC-VEIQN2Y4INZD32M6
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.96.141.223/32 -p tcp -m comment --comment "monitoring/prometheus-stack-prometheus-node-exporter:http-metrics cluster IP" -m tcp --dport 9100 -j KUBE-SVC-FGHWS5UEQEMPW7MD
-A KUBE-SERVICES -d 10.96.18.110/32 -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-operator:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-AOUT2BU4S3M45XHL
-A KUBE-SERVICES -d 10.96.95.27/32 -p tcp -m comment --comment "kube-system/iptables-exporter:metrics cluster IP" -m tcp --dport 9455 -j KUBE-SVC-UQFAXRMDKWGP57EQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-AOUT2BU4S3M45XHL ! -s 10.244.0.0/16 -d 10.96.18.110/32 -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-operator:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-AOUT2BU4S3M45XHL -m comment --comment "monitoring/prometheus-stack-kube-prom-operator:https -> 10.244.0.15:10250" -j KUBE-SEP-KNQXFJZOZP2GHUE2
-A KUBE-SVC-DZDM7IO5AFEVYOOO ! -s 10.244.0.0/16 -d 10.96.226.108/32 -p tcp -m comment --comment "monitoring/prometheus-stack-grafana:http-web cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-DZDM7IO5AFEVYOOO -m comment --comment "monitoring/prometheus-stack-grafana:http-web -> 10.244.0.13:3000" -j KUBE-SEP-OKLCRWA7UCKC5CQW
-A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.244.0.3:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-ZXMNUKOKXUTL2MK2
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.244.0.4:53" -j KUBE-SEP-SF3LG62VAE5ALYDV
-A KUBE-SVC-FGHWS5UEQEMPW7MD ! -s 10.244.0.0/16 -d 10.96.141.223/32 -p tcp -m comment --comment "monitoring/prometheus-stack-prometheus-node-exporter:http-metrics cluster IP" -m tcp --dport 9100 -j KUBE-MARK-MASQ
-A KUBE-SVC-FGHWS5UEQEMPW7MD -m comment --comment "monitoring/prometheus-stack-prometheus-node-exporter:http-metrics -> 172.18.0.6:9100" -j KUBE-SEP-FV55VDA2PSGDD6O7
-A KUBE-SVC-JD5MR3NA4I4DYORP ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.244.0.3:9153" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-ZP3FB6NMPNCO4VBJ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.244.0.4:9153" -j KUBE-SEP-PUHFDAMRBZWCPADU
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.244.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 172.18.0.6:6443" -j KUBE-SEP-AC73W4T6RI3OJJHK
-A KUBE-SVC-POKN4CH4DSJ62JJQ ! -s 10.244.0.0/16 -d 10.96.254.17/32 -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:http-web cluster IP" -m tcp --dport 9090 -j KUBE-MARK-MASQ
-A KUBE-SVC-POKN4CH4DSJ62JJQ -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:http-web -> 10.244.0.17:9090" -j KUBE-SEP-OI6O6S6A7LILGFKB
-A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.244.0.3:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-6E7XQMQ4RAYOWTTM
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.244.0.4:53" -j KUBE-SEP-WXWGHGKZOCNYRYI7
-A KUBE-SVC-TTFD5KSLOLXBOCXP ! -s 10.244.0.0/16 -d 10.96.254.17/32 -p tcp -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:reloader-web cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
-A KUBE-SVC-TTFD5KSLOLXBOCXP -m comment --comment "monitoring/prometheus-stack-kube-prom-prometheus:reloader-web -> 10.244.0.17:8080" -j KUBE-SEP-2UVSSC3CVMBGMTKM
-A KUBE-SVC-UQFAXRMDKWGP57EQ ! -s 10.244.0.0/16 -d 10.96.95.27/32 -p tcp -m comment --comment "kube-system/iptables-exporter:metrics cluster IP" -m tcp --dport 9455 -j KUBE-MARK-MASQ
-A KUBE-SVC-UQFAXRMDKWGP57EQ -m comment --comment "kube-system/iptables-exporter:metrics -> 172.18.0.6:9455" -j KUBE-SEP-ETTNL26ZIOYBEQUF
-A KUBE-SVC-VEIQN2Y4INZD32M6 ! -s 10.244.0.0/16 -d 10.96.159.22/32 -p tcp -m comment --comment "monitoring/prometheus-stack-kube-state-metrics:http cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
-A KUBE-SVC-VEIQN2Y4INZD32M6 -m comment --comment "monitoring/prometheus-stack-kube-state-metrics:http -> 10.244.0.14:8080" -j KUBE-SEP-5ESA4NH7X3XM47QM
COMMIT
# Completed on Sun Nov  3 04:10:30 2024
